--- a/companies-crud-prod.yml
+++ b/companies-crud-prod.yml
@@ -1,8 +1,6 @@
-spring:
-  datasource:
-    username: debuggeandoideas-prod
-    hikari:
-      maximum-pool-size: 5
-      connection-timeout: 20000
-    url: jdbc:postgresql://localhost:5432/companies
-    password: udemy2222
+db:
+  username: debuggeandoideas-prod
+  maximum-pool-size: 5
+  connection-timeout: 20000
+  url: jdbc:postgresql://localhost:5432/companies-prod
+  password: udemy2222
