--- a/companies-crud-prod.yml
+++ b/companies-crud-prod.yml
@@ -2,5 +2,5 @@ db:
   username: debuggeandoideas-prod
   maximum-pool-size: 5
   connection-timeout: 20000
-  url: jdbc:postgresql://localhost:5434/companies-prod
+  url: jdbc:postgresql://db-companies:5434/companies-prod
   password: udemy4444
